[package]
name = "veil_pos_simulation"
version = "0.1.0"
authors = ["Mimir <mimir@runeledger.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }